# antigravity-agent

./: .editorconfig  COPILOT_SETUP_GUIDE.md  README.md  package-lock.json  package.json
.github/: copilot-instructions.md
.github/agents/: architect.agent.md  debugger.agent.md  reviewer.agent.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  react.instructions.md  security.instructions.md  tauri.instructions.md  testing.instructions.md  typescript.instructions.md
.github/prompts/: code-review.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: autobuild.yml  ci.yml  copilot-setup-steps.yml  release.yml  updater.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: antigravity_backup.rs  antigravity_cleanup.rs  antigravity_path_config.rs  antigravity_restore.rs  antigravity_starter.rs  app_settings.rs  config_manager.rs  constants.rs  db_monitor.rs  main.rs  path_utils.rs  platform_utils.rs  system_tray.rs  window_event_handler.rs  window_state_manager.rs
src-tauri/src/commands/: account_commands.rs  backup_commands.rs  db_monitor_commands.rs  logging_commands.rs  mod.rs  platform_commands.rs  process_commands.rs  settings_commands.rs  tray_commands.rs  window_commands.rs
src-tauri/src/utils/: log_decorator.rs  log_sanitizer.rs  mod.rs  tracing_config.rs
src/components/: AntigravityPathDialog.tsx  SettingsDialog.tsx  SilentLogExport.tsx  Toolbar.tsx  (+2 more)
(+36 files in other folders)
